<resources>
    <string name="app_name">TED_APP_2</string>

    <!-- Page de sélection de création de compte -->
    <string name="new_account_title">Création de compte</string>
    <string name="image_description">Ted App QR Code image</string>
    <string name="manual_fill_button">Remplir le formulaire manuellement</string>

    <!-- Page de scanner QR Code -->
    <string name="scanner_title">Scanner</string>
    <string name="result_not_found">Result not found</string>
    <string name="scan_something">Scan something…</string>

    <!-- Page de compte -->
    <string name="last_name">Nom</string>
    <string name="first_name">Prénom</string>
    <string name="email">Email</string>
    <string name="address">Adresse</string>
    <string name="zip_code">Code postal</string>
    <string name="city">Ville</string>

    <!-- Page de création de compte manuelle -->
    <string name="card_ref">Carte de fidélité</string>
    <string name="create_button">Créer</string>

    <!-- Page de modification de compte -->
    <string name="account">Compte</string>
    <string name="save_changes_button">J\'enregistre les modifications</string>

    <!-- Page d'accueil -->
    <string name="card">Carte</string>
    <string name="offers">Offres</string>
    <string name="stores">Magasins</string>
    <string name="barcode_image_description">Barcode Image</string>
    
    <!-- Détails des magasins -->
    <string name="storeAddress">Adresse</string>
    <string name="storeZipCodeCity">Code postal - Ville</string>
    <string name="storeDescription">Description :</string>

</resources>