<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountDetailActivity"
    android:orientation="vertical">

    <include
        layout="@layout/layout_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <EditText
            android:id="@+id/editTextAccountChangesLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:hint="@string/last_name"
            android:autofillHints="lastName"
            style="@style/AccountEditText"/>

        <EditText
            android:id="@+id/editTextAccountChangesFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:hint="@string/first_name"
            android:autofillHints="firstName"
            style="@style/AccountEditText"/>

        <EditText
            android:id="@+id/editTextAccountChangesEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:autofillHints="emailAddress"
            style="@style/AccountEditText"/>

        <EditText
            android:id="@+id/editTextAccountChangesAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:hint="@string/address"
            android:autofillHints="address"
            style="@style/AccountEditText"/>

        <EditText
            android:id="@+id/editTextAccountChangesZipCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/zip_code"
            android:autofillHints="zipCode"
            style="@style/AccountEditText"/>

        <EditText
            android:id="@+id/editTextAccountChangesCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:hint="@string/city"
            android:autofillHints="city"
            style="@style/AccountEditText"/>

            <Button
                android:id="@+id/buttonModifyAccount"
                android:layout_marginTop="@dimen/high_margin"
                android:text="@string/save_changes_button"
                style="@style/ButtonCreateAccount"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>