<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- TODO: changer logo "back" -->
    <include
        android:id="@+id/include"
        layout="@layout/layout_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/textViewAccountLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginHorizontal="20dp"
                android:textSize="14sp"
                android:hint="@string/last_name"
                android:autofillHints="lastName"/>

            <EditText
                android:id="@+id/textViewAccountFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="20dp"
                android:textSize="14sp"
                android:hint="@string/first_name"
                android:autofillHints="firstName"/>

            <EditText
                android:id="@+id/textViewAccountEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="20dp"
                android:textSize="14sp"
                android:hint="@string/email"
                android:autofillHints="emailAddress"/>

            <EditText
                android:id="@+id/textViewAccountAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="20dp"
                android:textSize="14sp"
                android:hint="@string/address"
                android:autofillHints="postalAddress"/>

            <EditText
                android:id="@+id/textViewAccountZipCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="20dp"
                android:textSize="14sp"
                android:hint="@string/zip_code"
                android:autofillHints="zipCode"/>

            <EditText
                android:id="@+id/textViewAccountCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="20dp"
                android:textSize="14sp"
                android:hint="@string/city"
                android:autofillHints="city"/>

            <EditText
                android:id="@+id/textViewAccountCardRef"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="20dp"
                android:textSize="14sp"
                android:hint="@string/card_ref"
                android:autofillHints="cardRef"/>

            <Button
                android:id="@+id/button_create_account"
                android:layout_marginTop="40dp"
                android:text="@string/create_button"
                style="@style/ButtonCreateAccount"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>