<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">
        <TextView
            style="@style/Tab"
            android:id="@+id/textViewCard"
            android:background="@color/purple_700"
            android:text="@string/card"/>

        <TextView
            style="@style/Tab"
            android:id="@+id/textViewOffers"
            android:background="@color/purple_500"
            android:text="@string/offers"/>

        <TextView
            style="@style/Tab"
            android:id="@+id/textViewStores"
            android:background="@color/purple_200"
            android:text="@string/stores"/>

    </LinearLayout>

</LinearLayout>