<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StoreDetailActivity"
    android:orientation="vertical">

    <include
        layout="@layout/layout_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageViewStoreDetail"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:adjustViewBounds="true" />
            
            <TextView
                android:id="@+id/textViewStoreAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/storeAddress"
                style="@style/StoreDetailTextView" />

            <TextView
                android:id="@+id/textViewStoreZipCodeCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/storeZipCodeCity"
                style="@style/StoreDetailTextView" />

            <TextView
                android:id="@+id/textViewStoreDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/storeDescription"
                style="@style/StoreDetailTextView" />

        </LinearLayout>

    </ScrollView>
</LinearLayout>