<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CardFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewLastName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/last_name"
                    style="@style/TextViewNameCardFragment"/>

                <TextView
                    android:id="@+id/textViewFirstName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="@dimen/low_margin"
                    android:text="@string/first_name"
                    style="@style/TextViewNameCardFragment"/>
            </LinearLayout>

            <ImageView
                android:id="@+id/imageViewBarcode"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="100dp"
                android:src="@drawable/barcode" />

            <TextView
                android:id="@+id/textViewCardRef"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/card_ref"
                style="@style/TextViewCardRefCardFragment"/>

        </LinearLayout>

    </ScrollView>

</FrameLayout>